--- a/package.json
+++ b/package.json
@@ -10,7 +10,8 @@
     "react-helmet": "^5.2.1",
     "react-router-dom": "^5.0.0",
     "react-scripts": "3.0.0",
-    "react-transition-group": "^4.0.1"
+    "react-transition-group": "^4.0.1",
+    "react-visibility-sensor": "^5.0.2"
   },
   "scripts": {
     "start": "react-scripts start",
